[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.TemporaryRestrainingOrder"
version = "0.0.1"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Shivani Dahya", email = "shivani.dahya@su.suffolk.edu" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
